setup signal to delete from cloudflare and ...
also add signal to update video data once its fininshed processing
and other improvements

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = cloudflare_stream_field
+name = django-cloudflare-stream
 version = 0.1
 description = A CloudFlare Stream Field for Django with admin integration.
 long_description = file: README.md
@@ -30,9 +30,10 @@ python_requires = >=3.6
 install_requires =
     Django >= 3.2
     requests >= 2.28
+    celery >= 5.2.7
 
 [options.package_data]
-baseapp_payments =
+cloudflare_stream_field =
     *.html
     *.js
     *.map
